--- a/return-exchange_not_use.html
+++ b/return-exchange_not_use.html
@@ -161,47 +161,28 @@
     <main>
         <section>
             <h1 class="text-center text-orange my-3 font-60">Profile</h1>
-            <div class="mx-0 mx-lg-5 my-5">
-
-            <div class="row mb-5">
+            <div class="row">
                 <div class="col d-flex justify-content-center">
                     <div class="text-center">
-                        <h4 class="text-orange semibold font-40 my-3">Addresses</h4>
-                        <div class="d-grid my-4">
-                            <button class="btn btn-2" type="">Add A New Address</button>
-                        </div>   
-                    </div>
-                </div>
-            </div>
-            <div class="row g-4">
-                <div class="col-12 col-lg-6">
-                    <div class="bg-orange-10 text-center p-2 p-lg-4">
-                        <h4 class="bold mb-5">Address 1</h4>
-                        <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                            Lorem ipsum dolor sit amet, consectetur  elit
-                             dolor sit amet, consectetur adipiscing elit</p>
-                        <div class="d-flex justify-content-center gap-4">
-                            <button class="btn btn-2" type="">Edit</button>
-                            <button class="btn btn-2" type="">Delete</button>
+                        <div>
+                            <h4 class="text-orange semibold font-40 mb-4 mb-lg-5">Returns & Exchanges</h4>
+                            <p class="text-orange mb-4 mb-lg-5">Enter your order number and Email or 
+                            Phone to find your order</p>
                         </div>
-                    </div>
-                </div>
-                <div class="col-12 col-lg-6">
-                    <div class="bg-orange-10 text-center p-2 p-lg-4">
-                        <h4 class="bold mb-5">Address 2</h4>
-                        <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                            Lorem ipsum dolor sit amet, consectetur  elit
-                             dolor sit amet, consectetur adipiscing elit</p>
-                        <div class="d-flex justify-content-center gap-4">
-                            <button class="btn btn-2" type="">Edit</button>
-                            <button class="btn btn-2" type="">Delete</button>
+                        <div>
+                            <div class="mb-4">
+                                <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Order Number">
+                            </div>
+                            <div class="mb-4">
+                                <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Email or Phone">
+                            </div>
+                            <div class="d-grid my-5">
+                                <button class="btn btn-2" type="submit">Find Your Order</button>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
         </section>
     </main>
 
@@ -283,7 +264,6 @@
             </div>
         </div>
     </footer>
-
     <script defer="defer" src="https://www.imprzd.com/bi/in-scol/app.js" inject="true" async test="{}" id="imprzd_SOL" domain="https://www.imprzd.com" api_type="scol"
             merchantdata="MTg="
             imprzd_title_text="Customer Reviews"
