--- a/terms_condition.html
+++ b/terms_condition.html
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gaitonde</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Flex:opsz,wght@8..144,100..1000&display=swap" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="wwwroot/css/styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Gaitonde</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto+Flex:opsz,wght@8..144,100..1000&display=swap"
+    rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link rel="stylesheet" href="wwwroot/css/styles.css">
 </head>
+
 <body>
+
     <header>
         <!-- deals bar -->
         <div class="bg-orange-60 d-none" style="width: 100%;">
@@ -158,168 +163,112 @@
 
     </header>
 
-    <main>
-        <section>
-            <h1 class="text-center text-orange my-3 font-60">Profile</h1>
-            <div class="mx-0 mx-lg-5 my-5">
+  <main>
+    <!-- <div class="bg-orange-10" style="height: 300px;">
 
-            <div class="row mb-5">
-                <div class="col d-flex justify-content-center">
-                    <div class="text-center">
-                        <h4 class="text-orange semibold font-40 my-3">Addresses</h4>
-                        <div class="d-grid my-4">
-                            <button class="btn btn-2" type="">Add A New Address</button>
-                        </div>   
-                    </div>
-                </div>
-            </div>
-            <div class="row g-4">
-                <div class="col-12 col-lg-6">
-                    <div class="bg-orange-10 text-center p-2 p-lg-4">
-                        <h4 class="bold mb-5">Address 1</h4>
-                        <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                            Lorem ipsum dolor sit amet, consectetur  elit
-                             dolor sit amet, consectetur adipiscing elit</p>
-                        <div class="d-flex justify-content-center gap-4">
-                            <button class="btn btn-2" type="">Edit</button>
-                            <button class="btn btn-2" type="">Delete</button>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-12 col-lg-6">
-                    <div class="bg-orange-10 text-center p-2 p-lg-4">
-                        <h4 class="bold mb-5">Address 2</h4>
-                        <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                            Lorem ipsum dolor sit amet, consectetur  elit
-                             dolor sit amet, consectetur adipiscing elit</p>
-                        <div class="d-flex justify-content-center gap-4">
-                            <button class="btn btn-2" type="">Edit</button>
-                            <button class="btn btn-2" type="">Delete</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
+    </div>  -->
+    <section class="my-5">
+        <h1 class="text-center text-orange my-3 font-40">Terms & Conditions</h1>
+        <p class="font-26">The use of the website and all the materials on this website are subject to the terms and conditions of this legal webpage.</p>
+        <p class="font-26">Please read these terms and conditions carefully before using the website. By using this website, you acknowledge that you have read, understood, and agree to be bound by the terms and conditions of use contained on this legal webpage. These terms and conditions may be amended or changed by us at any time at our discretion. You agree that your continued use of this website after any such
+            amendment or change shall constitute your agreement to any such changes.</p>
+    </section>
+    
+  </main>
+
+  <footer>
+    <div class="row bg-orange-20 p-4 g-0">
+        <div class="col-12 col-lg-2">
+            <img src="wwwroot/images/gaitonde-logo.svg" alt="gaitonde-logo" class="mb-3 img-fluid">
+            <!-- <p class="font-12">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <p class="font-12">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p> -->
         </div>
-        </section>
-    </main>
-
-    <footer>
-        <div class="row bg-orange-20 p-4 g-0">
-            <div class="col-12 col-lg-2">
-                <img src="wwwroot/images/gaitonde-logo.svg" alt="gaitonde-logo" class="mb-3 img-fluid">
-                <!-- <p class="font-12">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                <p class="font-12">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p> -->
-            </div>
-            <div class="col-12 col-lg-2">
-                <h5 class="text-orange bold px-2 font-18">Explore</h5>
-                <nav class="nav flex-row flex-lg-column">
-                    <a class="nav-link font-12 px-2" href="faq.html">FAQ</a>
-                    <a class="nav-link font-12 px-2" href="testimonials.html">Testimonials</a>
-                    <!-- <a class="nav-link font-12 px-2" href="#">Sitemap</a> -->
-                    <!-- <a class="nav-link font-12 px-2" href="#">Disclaimer</a> -->   
-                </nav>
-            </div>
-            <div class="col-12 col-lg-2">
-                <h5 class="text-orange bold px-2 font-18">Our&nbsp;Advantage</h5>
-                <nav class="nav flex-row flex-lg-column">
-                    <a class="nav-link font-12 px-2" href="#">Genuine Leather Shoes</a>
-                    <a class="nav-link font-12 px-2" href="#">Genuine Leather Accessories</a>
-                    <a class="nav-link font-12 px-2" href="#">Genuine Leather Sandals</a>
-                    <a class="nav-link font-12 px-2" href="#">Genuine Leather Chappals</a>
-                </nav>
-            </div>
-            <div class="col-12 col-lg-2">
-                <h5 class="text-orange bold px-2 font-18">Policies</h5>
-                <nav class="nav flex-row flex-lg-column">
-                    <a class="nav-link font-12 px-2" href="privacy_policy.html">Privacy Policy</a>
+        <div class="col-12 col-lg-2">
+            <h5 class="text-orange bold px-2 font-18">Explore</h5>
+            <nav class="nav flex-row flex-lg-column">
+                <a class="nav-link font-12 px-2" href="faq.html">FAQ</a>
+                <a class="nav-link font-12 px-2" href="testimonials.html">Testimonials</a>
+                <!-- <a class="nav-link font-12 px-2" href="#">Sitemap</a> -->
+                <!-- <a class="nav-link font-12 px-2" href="#">Disclaimer</a> -->   
+            </nav>
+        </div>
+        <div class="col-12 col-lg-2">
+            <h5 class="text-orange bold px-2 font-18">Our&nbsp;Advantage</h5>
+            <nav class="nav flex-row flex-lg-column">
+                <a class="nav-link font-12 px-2" href="#">Genuine Leather Shoes</a>
+                <a class="nav-link font-12 px-2" href="#">Genuine Leather Accessories</a>
+                <a class="nav-link font-12 px-2" href="#">Genuine Leather Sandals</a>
+                <a class="nav-link font-12 px-2" href="#">Genuine Leather Chappals</a>
+            </nav>
+        </div>
+        <div class="col-12 col-lg-2">
+            <h5 class="text-orange bold px-2 font-18">Policies</h5>
+            <nav class="nav flex-row flex-lg-column">
+                <a class="nav-link font-12 px-2" href="privacy_policy.html">Privacy Policy</a>
                     <a class="nav-link font-12 px-2" href="return_exchange.html">Delivery & Return Policy</a>
                     <a class="nav-link font-12 px-2" href="terms_condition.html">Terms & Conditions</a>
-                </nav>
-            </div>
-            <div class="col-12 col-lg-2">
-                <h5 class="text-orange bold px-2 font-18">Reach&nbsp;US</h5>
-                <nav class="nav flex-row flex-lg-column">
-                    <p class="px-2 font-12">
-                        5th Floor,”A” Block
-                        Alsa Crescent
-                        No:58, Harrington Road
-                        Chetpet,Chennai 600031
-                    </p>
-                </nav>
-            </div>
-            <div class="col-12 col-lg-2">
-                <h5 class="text-orange bold px-2 font-18">Contact Us:</h5>
-                <nav class="nav flex-row flex-lg-column">
-                    <a class="nav-link d-flex align-items-center gap-2 font-12 px-2" href="#"><img src="wwwroot/images/footer-phone-icon.svg"></img> 044 28363101</a>
-                    <a class="nav-link d-flex align-items-center gap-2 font-12 px-2" href="#"><img src="wwwroot/images/footer-whatsapp-icon.svg"></img> 97907 04282</a>
-                    <a class="nav-link d-flex align-items-center gap-2 font-12 px-2" href="mailto:domestic@gaitonde.com"><img src="wwwroot/images/footer-mail-icon.svg"></img> domestic@gaitonde.com</a>
-                    <a class="nav-link d-flex align-items-center gap-2 font-12 px-2" href="https://gaitonde.com/"><img src="wwwroot/images/footer-web-icon.svg"></img> www.gaitonde.com</a>
-                </nav>
-            </div>
+            </nav>
         </div>
-        <div class="bg-orange-60" style="width: 100%;">
-            <div class="row g-0">
-                <div class="p-2 text-center d-flex flex-column flex-lg-row justify-content-around align-items-center">
+        <div class="col-12 col-lg-2">
+            <h5 class="text-orange bold px-2 font-18">Reach&nbsp;US</h5>
+            <nav class="nav flex-row flex-lg-column">
+                <p class="px-2 font-12">
+                    5th Floor,”A” Block
+                    Alsa Crescent
+                    No:58, Harrington Road
+                    Chetpet,Chennai 600031
+                </p>
+            </nav>
+        </div>
+        <div class="col-12 col-lg-2">
+            <h5 class="text-orange bold px-2 font-18">Contact Us:</h5>
+            <nav class="nav flex-row flex-lg-column">
+                <a class="nav-link d-flex align-items-center gap-2 font-12 px-2" href="#"><img src="wwwroot/images/footer-phone-icon.svg"></img> 044 28363101</a>
+                <a class="nav-link d-flex align-items-center gap-2 font-12 px-2" href="#"><img src="wwwroot/images/footer-whatsapp-icon.svg"></img> 97907 04282</a>
+                <a class="nav-link d-flex align-items-center gap-2 font-12 px-2" href="mailto:domestic@gaitonde.com"><img src="wwwroot/images/footer-mail-icon.svg"></img> domestic@gaitonde.com</a>
+                <a class="nav-link d-flex align-items-center gap-2 font-12 px-2" href="https://gaitonde.com/"><img src="wwwroot/images/footer-web-icon.svg"></img> www.gaitonde.com</a>
+            </nav>
+        </div>
+    </div>
+    <div class="bg-orange-60" style="width: 100%;">
+        <div class="row g-0">
+            <div class="p-2 text-center d-flex flex-column flex-lg-row justify-content-around align-items-center">
 
-                    <div class="d-flex align-items-center">
-                        <p class="text-white mb-0 p-2">
-                            Follow Us
-                            <a><img src="wwwroot/images/footer-facebook-icon.svg" alt="facbook-icon"></a>
-                            <!-- <a><img src="wwwroot/images/footer-twitter-icon.svg" alt="twitter-icon"></a> -->
-                            <a><img src="wwwroot/images/footer-instagram-icon.svg" alt="instagram-icon"></a>
-                        </p>
-                    </div>
-                    <div>
-                        <p class="text-white mb-0 p-2">© 2024, All rights reserved by Gaitonde Leathers and Accessories Private Limited</p>
-                    </div>
-                    <div>
-                        <p class="mb-0 p-2 text-white">
-                            <!-- <a class="text-white nav-link p-1 d-inline-flex">Privacy Policy</a>&nbsp;|&nbsp;<a class="text-white nav-link p-1 d-inline-flex">Return Policy</a>&nbsp;|&nbsp;<a class="text-white nav-link p-1 d-inline-flex">Terms and Conditions</a> -->
-                        </p>
-                    </div>
+                <div class="d-flex align-items-center">
+                    <p class="text-white mb-0 p-2">
+                        Follow Us
+                        <a><img src="wwwroot/images/footer-facebook-icon.svg" alt="facbook-icon"></a>
+                        <!-- <a><img src="wwwroot/images/footer-twitter-icon.svg" alt="twitter-icon"></a> -->
+                        <a><img src="wwwroot/images/footer-instagram-icon.svg" alt="instagram-icon"></a>
+                    </p>
+                </div>
+                <div>
+                    <p class="text-white mb-0 p-2">© 2024, All rights reserved by Gaitonde Leathers and Accessories Private Limited</p>
+                </div>
+                <div>
+                    <p class="mb-0 p-2 text-white">
+                        <!-- <a class="text-white nav-link p-1 d-inline-flex">Privacy Policy</a>&nbsp;|&nbsp;<a class="text-white nav-link p-1 d-inline-flex">Return Policy</a>&nbsp;|&nbsp;<a class="text-white nav-link p-1 d-inline-flex">Terms and Conditions</a> -->
+                    </p>
                 </div>
             </div>
         </div>
-    </footer>
+    </div>
+</footer>
+  
+  <!-- Bootstrap -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
 
-    <script defer="defer" src="https://www.imprzd.com/bi/in-scol/app.js" inject="true" async test="{}" id="imprzd_SOL" domain="https://www.imprzd.com" api_type="scol"
-            merchantdata="MTg="
-            imprzd_title_text="Customer Reviews"
-            imprzd_title_font="Inter"
-            imprzd_title_font_color="#DB4834"
-            imprzd_title_font_size="50"
-            imprzd_title_font_weight="700"
-            imprzd_button_text="VIEW MORE POSTS"
-            imprzd_button_url="https://gaitonde.com/testimonials.php"
-            imprzd_button_color="#DB4834"
-            imprzd_button_border_radius="10px"
-            imprzd_button_font="Inter"
-            imprzd_button_font_color="#FFF"
-            imprzd_button_font_size="23"
-            imprzd_button_font_weight="700"
-            imprzd_post_title_font="Inter"
-            imprzd_post_title_font_color="#DB4834"
-            imprzd_post_title_font_size="24"
-            imprzd_post_title_font_weight="700"
-            imprzd_post_desc_font="Inter"
-            imprzd_post_desc_font_color="#201D1D"
-            imprzd_post_desc_font_size="16"
-            imprzd_post_desc_font_weight="400"
-            imprzd_container_color="#FFF"
-            imprzd_container_shadow_color="#ffffffaf"
-            google_font_link="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
-            display_customer_name="true"
-            display_product_name="true"
-            display_posted_date="true"
-            display_shared_channel="true"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.2.0/crypto-js.min.js"
+  <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script> -->
+  <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4="
+    crossorigin="anonymous"></script>
+  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.2.0/crypto-js.min.js"
         integrity="sha512-a+SUDuwNzXDvz4XrIcXHuCf089/iJAoN4lmrXJg18XnduKK6YlDHNRalv4yd1N40OKI80tFidF+rqTFKGPoWFQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script> -->
-    <script src="wwwroot/js/index.js"></script>
-    <script src="wwwroot/js/appsetting.js"></script>  
+  
 </body>
+
 </html>
