--- a/index.html
+++ b/index.html
@@ -179,16 +179,8 @@
             <!-- <div class="row" id="divBestSeller">
             </div> -->
             <div id="carouselExample" class="carousel slide">
-                <div class="carousel-inner" style="width: 70%; margin: auto;">
-                  <div class="carousel-item active">
-                    <img src="https://gaitonde.imersive.io/liveassets/11a8d09d-4f0c-42fe-a6c1-75c90756d440/30052023061822.png" class="w-100" alt="best-seller-product">
-                  </div>
-                  <div class="carousel-item">
-                    <img src="https://gaitonde.imersive.io/liveassets/6718dd53-3e8b-44fd-9780-0ae2ee53cefa/03072023054629.png" class="w-100" alt="best-seller-product">
-                  </div>
-                  <div class="carousel-item">
-                    <img src="https://gaitonde.imersive.io/liveassets/a1cae3cc-7f97-4619-87d6-fc977e22955e/28122020143343.png" class="w-100" alt="best-seller-product">
-                  </div>
+                <div class="carousel-inner" style="width: 500px; height: 500px; margin: auto;" id="divBestSeller">
+                 
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
                   <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -219,7 +211,7 @@
         
         <section>
             <div class="row p-5">
-                <div class="col">
+                <div class="col" style="margin-right:-2500px">
                     <div class="text-center">
                         <img src="wwwroot/images/feature1-icon.svg" alt="feature-icon" class="mb-4">
                         <h5 class="font-20 bold">FREE AND FAST DELIVERY</h5>
