--- a/product-page.html
+++ b/product-page.html
@@ -170,7 +170,7 @@
             <div class="row g-0 py-5">
                 <div class="col-12 col-lg-6 text-center">
                     <div class="mb-4">
-                        <img src="" class="rounded-0" alt="product-img" id="imgProductMainImage" height="500" width="400">
+                        <img src="" class="rounded-0" alt="product-img" id="imgProductMainImage" height="500" width="500">
                     </div>
                     <div class="gallery-wrap mb-4">
                         <img src="wwwroot/images/product-slider-backbtn.svg" id="backBtn"/>
@@ -229,7 +229,7 @@
                                 <h5 class="font-16 bold">APPLY FLAT400</h5>
                                 <p class="font-12 mb-0">Apply FLAT400 at checkout to avail a 400 off !</p>
                             </button> -->
-                            <button class="btn btn-2 rounded-0 py-4 text-uppercase" type="button" id="btnAddToCart">Add To Cart</button>
+                            <button class="btn button-2 rounded-0 py-4 text-uppercase" style="background-color:#fae4e1;" type="button" id="btnAddToCart">Add To Cart</button>
                         </div>
                         <div class="py-3">
                             <div class="accordion accordion-flush" id="accordionFlushExample">
@@ -337,6 +337,8 @@
         </section>
         <section class="py-5">
             <h1 class="text-center text-orange my-3 font-60">Similar Product</h1>
+
+            <img src="" class="rounded-0" alt="product-img" id="imgsimiliarproductImage" height="500" width="500">
             <div class="row g-0">
                 
                 <!-- This is proper card for product. Use this div in product loop -->
