changes regarding cart count and all

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 
     <main>
         <section class="section__hero">
-            <div class="row section__hero__grid" id="divTopCollection">
+            <div class="row" id="divTopCollection">
                 
             </div>
         </section>
