--- a/return_exchange.html
+++ b/return_exchange.html
@@ -271,9 +271,7 @@
     crossorigin="anonymous"></script> -->
   <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4="
     crossorigin="anonymous"></script>
-  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.2.0/crypto-js.min.js"
-        integrity="sha512-a+SUDuwNzXDvz4XrIcXHuCf089/iJAoN4lmrXJg18XnduKK6YlDHNRalv4yd1N40OKI80tFidF+rqTFKGPoWFQ=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"></script> -->
+    <script src="wwwroot/js/appsetting.js"></script>
   
 </body>
 
