complate some pending api and some changes.

--- a/cart.html
+++ b/cart.html
@@ -184,6 +184,7 @@
                                     <p class="text-orange font-35" id="spnCartTotalAmount"></p>
                                     <input type="hidden" id="hdnCartId">
                                 </div>
+                                <input type="hidden" id="hdn_cart_id">
                                 <div class="d-grid">
                                     <button class="btn btn-2 font-24" id="btnCheckoutRequest">CheckOut</button>
                                 </div>
