--- a/checkout.html
+++ b/checkout.html
@@ -287,7 +287,7 @@
                         </div>
                         <p class="text-orange py-1">Including ₹1,040.12 in taxes</p>
                         <div class="d-grid">
-                            <button type="submit" class="btn-2 button1  btn mb-3 font-30">Pay Now</button>
+                            <button type="submit" class="btn-2 button1  btn mb-3 font-30" id="btn_pay_now">Pay Now</button>
                         </div>
 
                     </div>
