hero section slider added

--- a/index.html
+++ b/index.html
@@ -158,10 +158,62 @@
     </header>
 
     <main>
-        <section class="section__hero">
-            <div class="row section__hero__grid" id="divTopCollection">
-                
+        <section class="section__hero carousel slide" id="carouselExampleHero">
+            <div class="row carousel-inner section__hero__grid">
+                <div class="carousel-item active">
+                    <div class="col-12 col-lg-6 d-flex align-items-end justify-content-center">
+                        <div class="d-flex flex-column">
+                            <p class="font-20">Top Selling!</p>
+                            <h1 class="text-orange font-60">Top Collection</h1>
+                            <p class="font-20">${topCollection.data[0].description}</p>
+                            <div class="text-center my-3">
+                                <button class="btn btn-1" onclick="location.href='products.html'">Shop now</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-lg-6 d-flex align-items-start justify-content-center">
+                        <img src="https://placehold.co/600x500/FDD1CB/white" class="img-fluid" alt="banner-img">
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <div class="col-12 col-lg-6 d-flex align-items-end justify-content-center">
+                        <div class="d-flex flex-column">
+                            <p class="font-20">Top Selling!</p>
+                            <h1 class="text-orange font-60">Top Collection</h1>
+                            <p class="font-20">${topCollection.data[0].description}</p>
+                            <div class="text-center my-3">
+                                <button class="btn btn-1" onclick="location.href='products.html'">Shop now</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-lg-6 d-flex align-items-start justify-content-center">
+                        <img src="https://placehold.co/600x500/FDD1CB/white" class="img-fluid" alt="banner-img">
+                    </div>  
+                </div>
+                <div class="carousel-item">
+                    <div class="col-12 col-lg-6 d-flex align-items-end justify-content-center">
+                        <div class="d-flex flex-column">
+                            <p class="font-20">Top Selling!</p>
+                            <h1 class="text-orange font-60">Top Collection</h1>
+                            <p class="font-20">${topCollection.data[0].description}</p>
+                            <div class="text-center my-3">
+                                <button class="btn btn-1" onclick="location.href='products.html'">Shop now</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-lg-6 d-flex align-items-start justify-content-center">
+                        <img src="https://placehold.co/600x500/FDD1CB/white" class="img-fluid" alt="banner-img">
+                    </div>
+                </div>
             </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleHero" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleHero" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
         </section>
         <section class="bg-orange-60 text-white">
             <div class="text-center p-5">
@@ -179,7 +231,7 @@
             <!-- <div class="row" id="divBestSeller">
             </div> -->
             <div id="carouselExample" class="carousel slide">
-                <div class="carousel-inner" style="width: 500px; height: 500px; margin: auto;" id="divBestSeller">
+                <div class="carousel-inner" id="divBestSeller">
                  
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
