change top collection design and api call dynamic

--- a/index.html
+++ b/index.html
@@ -158,59 +158,14 @@
     </header>
 
     <main>
-        <section class="section__hero carousel slide" id="carouselExampleHero">
-            <div class="row carousel-inner section__hero__grid">
-                <div class="carousel-item active">
-                    <div class="col-12 col-lg-6 d-flex align-items-end justify-content-center">
-                        <div class="d-flex flex-column">
-                            <p class="font-20">Top Selling!</p>
-                            <h1 class="text-orange font-60">Top Collection</h1>
-                            <p class="font-20">${topCollection.data[0].description}</p>
-                            <div class="text-center my-3">
-                                <button class="btn btn-1" onclick="location.href='products.html'">Shop now</button>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-12 col-lg-6 d-flex align-items-start justify-content-center">
-                        <img src="https://placehold.co/600x500/FDD1CB/white" class="img-fluid" alt="banner-img">
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <div class="col-12 col-lg-6 d-flex align-items-end justify-content-center">
-                        <div class="d-flex flex-column">
-                            <p class="font-20">Top Selling!</p>
-                            <h1 class="text-orange font-60">Top Collection</h1>
-                            <p class="font-20">${topCollection.data[0].description}</p>
-                            <div class="text-center my-3">
-                                <button class="btn btn-1" onclick="location.href='products.html'">Shop now</button>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-12 col-lg-6 d-flex align-items-start justify-content-center">
-                        <img src="https://placehold.co/600x500/FDD1CB/white" class="img-fluid" alt="banner-img">
-                    </div>  
-                </div>
-                <div class="carousel-item">
-                    <div class="col-12 col-lg-6 d-flex align-items-end justify-content-center">
-                        <div class="d-flex flex-column">
-                            <p class="font-20">Top Selling!</p>
-                            <h1 class="text-orange font-60">Top Collection</h1>
-                            <p class="font-20">${topCollection.data[0].description}</p>
-                            <div class="text-center my-3">
-                                <button class="btn btn-1" onclick="location.href='products.html'">Shop now</button>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-12 col-lg-6 d-flex align-items-start justify-content-center">
-                        <img src="https://placehold.co/600x500/FDD1CB/white" class="img-fluid" alt="banner-img">
-                    </div>
-                </div>
+        <section class="section__hero carousel slide" id="carouselTopCollection">
+            <div class="row carousel-inner" id="divTopCollection">
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleHero" data-bs-slide="prev">
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselTopCollection" data-bs-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Previous</span>
             </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleHero" data-bs-slide="next">
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselTopCollection" data-bs-slide="next">
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Next</span>
             </button>
