changes in some ui and half done similar product

--- a/contact.html
+++ b/contact.html
@@ -177,20 +177,31 @@
                 <div class="col-12 col-lg-6 px-0 px-lg-5">
                     <div class="d-flex justify-content-center">
                         <div style="height: 450px; width: 500px; padding: 25px; background-color: #FDD1CB;">
-                            <img src="wwwroot/images/map-icon.png" style="padding: 40px;" height="120px" width="120px">
-                            <div style="padding-left:100px; margin-top:-80px !important;">
-                                <label>Gaitonde Leathers and Accessories Pvt.Ltd</label>
-                                <label>5th Floor, “A” Block, Alsa Crescent</label>
-                            <label>No: 58, Harrington Road, Chetpet, Chennai 600031.</label>
-                            </div>
-                            <img src="wwwroot/images/phone-icon.png" style="padding: 40px;" height="120px" width="120px">
-                            <div style="padding-left:100px; margin-top:-80px !important;">
-                                <label>+91 97907 04282</label><br>
-                                <label>+91 98404 27099</label>
-                            </div>
-                            <img src="wwwroot/images/mail-icon.png" style="padding: 40px;" height="120px" width="120px">
-                            <div style="padding-left:100px; margin-top:-80px !important;">
-                                <label>domestic@gaitonde.com</label>
+                            <div class="row">
+                                <div class="col-sm-12">
+                                    <img src="wwwroot/images/map-icon.png" style="padding: 40px;" height="120px"
+                                        width="120px">
+                                    <div style="padding-left:100px; margin-top:-80px !important;">
+                                        <label>Gaitonde Leathers and Accessories Pvt.Ltd</label>
+                                        <label>5th Floor, “A” Block, Alsa Crescent</label>
+                                        <label>No: 58, Harrington Road, Chetpet, Chennai 600031.</label>
+                                    </div>
+                                </div>
+                                <div class="class col-sm-12 mt-3">
+                                    <img src="wwwroot/images/phone-icon.png" style="padding: 40px;" height="120px"
+                                        width="120px">
+                                    <div style="padding-left:100px; margin-top:-80px !important;">
+                                        <label>+91 97907 04282</label><br>
+                                        <label>+91 98404 27099</label>
+                                    </div>
+                                </div>
+                                <div class="class col-sm-12 mt-4">
+                                    <img src="wwwroot/images/mail-icon.png" style="padding: 40px;" height="120px"
+                                        width="120px">
+                                    <div style="padding-left:100px; margin-top:-80px !important;">
+                                        <label>domestic@gaitonde.com</label>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
