--- a/products.html
+++ b/products.html
@@ -172,8 +172,8 @@
           <nav class="nav">
             <a class="nav-link" href="#">View All</a>
             <a class="nav-link" href="#">Shoes</a>
-            <a class="nav-link" href="#">Chhapals</a>
-            <a class="nav-link" href="#">Loffers</a>
+            <a class="nav-link" href="#">Chappals</a>
+            <a class="nav-link" href="#">Loafers</a>
           </nav>
         </div>
 
@@ -207,7 +207,8 @@
         </div>
       </div>
       <!-- filterd items tabs div -->
-      <div id="divFilteredItems" class="d-flex gap-4 flex-column flex-md-row align-items-start align-items-md-center mb-3">        
+      <div id="divFilteredItems"
+        class="d-flex gap-4 flex-column flex-md-row align-items-start align-items-md-center mb-3">
       </div>
       <div class="row" id="divProductList">
       </div>
