--- a/index.html
+++ b/index.html
@@ -158,8 +158,8 @@
     </header>
 
     <main>
-        <section class="section__hero carousel slide" id="carouselTopCollection">
-            <div class="row carousel-inner" id="divTopCollection">
+        <section class="section__hero carousel slide p-3" id="carouselTopCollection">
+            <div class="row carousel-inner p-2" id="divTopCollection">
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselTopCollection" data-bs-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
