Checkout Filter Done

--- a/product-page.html
+++ b/product-page.html
@@ -370,45 +370,23 @@
                                 <path d="M7.32878 12.7617L9.78198 10.3104L7.34226 7.87254L8.09709 7.1183L10.5368 9.55613L12.99 7.10483L13.7718 7.88601L11.3186 10.3373L13.7583 12.7752L13.0035 13.5294L10.5638 11.0916L8.11057 13.5429L7.32878 12.7617Z" fill="#DB4834"/>
                                 </svg>
                             </button>   
-                        </div>
-                        <div class="offcanvas-body">
-                            <p class="bold">Size</p>
+                         </div> -->
+                         <!-- <div class="offcanvas-body"> -->
+                            <!-- <p class="bold">Size</p>
                             <div>
 
                                 <input type="radio" class="btn-check" name="options" id="cartAdd-size-4" autocomplete="off">
                                 <label class="btn-quickAdd-size btn p-2 me-2 mb-2" for="cartAdd-size-4">4</label>
 
-                                <input type="radio" class="btn-check" name="options" id="cartAdd-size-5" autocomplete="off">
-                                <label class="btn-quickAdd-size btn p-2 me-2 mb-2" for="cartAdd-size-5">5</label>
-
-                                <input type="radio" class="btn-check" name="options" id="cartAdd-size-6" autocomplete="off">
-                                <label class="btn-quickAdd-size btn p-2 me-2 mb-2" for="cartAdd-size-6">6</label>
-
-                                <input type="radio" class="btn-check" name="options" id="cartAdd-size-7" autocomplete="off">
-                                <label class="btn-quickAdd-size btn p-2 me-2 mb-2" for="cartAdd-size-7">7</label>
-
-                                <input type="radio" class="btn-check" name="options" id="cartAdd-size-8" autocomplete="off">
-                                <label class="btn-quickAdd-size btn p-2 me-2 mb-2" for="cartAdd-size-8">8</label>
-
-                                <input type="radio" class="btn-check" name="options" id="cartAdd-size-9" autocomplete="off">
-                                <label class="btn-quickAdd-size btn p-2 me-2 mb-2" for="cartAdd-size-9">9</label>
-
-                                <input type="radio" class="btn-check" name="options" id="cartAdd-size-10" autocomplete="off">
-                                <label class="btn-quickAdd-size btn p-2 me-2 mb-2" for="cartAdd-size-10">10</label>
-
-                                <input type="radio" class="btn-check" name="options" id="cartAdd-size-11" autocomplete="off">
-                                <label class="btn-quickAdd-size btn p-2 me-2 mb-2" for="cartAdd-size-11">11</label>
-
-                                <input type="radio" class="btn-check" name="options" id="cartAdd-size-12" autocomplete="off">
-                                <label class="btn-quickAdd-size btn p-2 me-2 mb-2" for="cartAdd-size-12">12</label>
+                              
                             </div>
                             <div class="d-grid my-2">
                                 <button class="btn-quickAdd-cart btn">Add to Cart</button>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                     </div>
-                </div> -->
+                </div> 
                 <!-- This is proper card for product. Use his div in product loop -->
                 
                 <!-- <div class="col px-0">
