Sweet Alert message in all cart button and Empty cart button

--- a/cart.html
+++ b/cart.html
@@ -217,7 +217,7 @@
                             <img src="wwwroot/images/cod-icon.svg">
                             <p class="text-orange me-4 font-12 mb-0">Cash on Delivery</p>
                         </div>
-                        
+
                     </div>
                 </div>
             </div>
@@ -316,6 +316,7 @@
     <script src="https://code.jquery.com/jquery-3.7.1.js"
         integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
 
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="wwwroot/js/appsetting.js"></script>
     <script src="wwwroot/js/cart.js"></script>
 </body>
