Free And Fast  Delivery margin padding set

--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
         
         <section>
             <div class="row p-5">
-                <div class="col" style="margin-right:-2500px">
+                <div class="col-12 text-center">
                     <div class="text-center">
                         <img src="wwwroot/images/feature1-icon.svg" alt="feature-icon" class="mb-4">
                         <h5 class="font-20 bold">FREE AND FAST DELIVERY</h5>
