Set Size Ascending and Descending order in Filter page

--- a/product-page.html
+++ b/product-page.html
@@ -291,11 +291,11 @@
             </div>
         </section>
 
-        <section>
+        <!-- <section>
             <div class="row py-4 g-0">
                 <div class="col-12 col-lg-6 order-1 order-lg-0">
                     <div class="d-flex flex-column align-items-center align-items-lg-start">
-                        <!-- <h2 class="text-orange font-40 semibold">Title 1</h2> -->
+                        <h2 class="text-orange font-40 semibold">Title 1</h2>
                         <p class="font-20 text-black-95">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem
                             ipsum
                             dolor sit amet, consectetur adipiscing elit.adipiscing elit. Lorem ipsum
@@ -316,7 +316,7 @@
                 </div>
                 <div class="col-12 col-lg-6">
                     <div class="d-flex flex-column align-items-center align-items-lg-start">
-                        <!-- <h2 class="text-orange font-40 semibold">Title 2</h2> -->
+                        <h2 class="text-orange font-40 semibold">Title 2</h2>
                         <p class="font-20 text-black-95">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem
                             ipsum
                             dolor sit amet, consectetur adipiscing elit.adipiscing elit. Lorem ipsum
@@ -327,7 +327,7 @@
             <div class="row py-4 g-0">
                 <div class="col-12 col-lg-6 order-1 order-lg-0">
                     <div class="d-flex flex-column align-items-center align-items-lg-start">
-                        <!-- <h2 class="text-orange font-40 semibold">Title 3</h2> -->
+                        <h2 class="text-orange font-40 semibold">Title 3</h2>
                         <p class="font-20 text-black-95">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem
                             ipsum
                             dolor sit amet, consectetur adipiscing elit.adipiscing elit. Lorem ipsum
@@ -348,7 +348,7 @@
                 </div>
                 <div class="col-12 col-lg-6">
                     <div class="d-flex flex-column align-items-center align-items-lg-start">
-                        <!-- <h2 class="text-orange font-40 semibold">Title 4</h2> -->
+                        <h2 class="text-orange font-40 semibold">Title 4</h2>
                         <p class="font-20 text-black-95">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem
                             ipsum
                             dolor sit amet, consectetur adipiscing elit.adipiscing elit. Lorem ipsum
@@ -356,7 +356,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
 
         <section>
             <div class="imprzd-wrapper" id="imprzd-wrapper-section"></div>
@@ -497,15 +497,10 @@
             <div class="col-12 col-lg-2">
                 <h5 class="text-orange bold px-2 font-18">Contact Us:</h5>
                 <nav class="nav flex-row flex-lg-column">
-                    <a class="nav-link d-flex align-items-center gap-2 font-12 px-2" href="#"><img
-                            src="wwwroot/images/footer-phone-icon.svg"></img> 044 28363101</a>
-                    <a class="nav-link d-flex align-items-center gap-2 font-12 px-2" href="#"><img
-                            src="wwwroot/images/footer-whatsapp-icon.svg"></img> 97907 04282</a>
-                    <a class="nav-link d-flex align-items-center gap-2 font-12 px-2"
-                        href="mailto:domestic@gaitonde.com"><img src="wwwroot/images/footer-mail-icon.svg"></img>
-                        domestic@gaitonde.com</a>
-                    <a class="nav-link d-flex align-items-center gap-2 font-12 px-2" href="https://gaitonde.com/"><img
-                            src="wwwroot/images/footer-web-icon.svg"></img> www.gaitonde.com</a>
+                    <a class="nav-link d-flex align-items-center gap-2 font-12 px-2" ><img src="wwwroot/images/footer-phone-icon.svg"></img> 044 28363101</a>
+                    <a class="nav-link d-flex align-items-center gap-2 font-12 px-2" href="https://api.whatsapp.com/send/?phone=919790704282&text&type=phone_number&app_absent=0"><img src="wwwroot/images/footer-whatsapp-icon.svg"></img> 97907 04282</a>
+                    <a class="nav-link d-flex align-items-center gap-2 font-12 px-2" href="mailto:domestic@gaitonde.com"><img src="wwwroot/images/footer-mail-icon.svg"></img> domestic@gaitonde.com</a>
+                    <a class="nav-link d-flex align-items-center gap-2 font-12 px-2" href="https://gaitonde.com/"><img src="wwwroot/images/footer-web-icon.svg"></img> www.gaitonde.com</a>
                 </nav>
             </div>
         </div>
