--- a/return-exchange_not_use.html
+++ b/return-exchange_not_use.html
@@ -233,8 +233,8 @@
             <div class="col-12 col-lg-2">
                 <h5 class="text-orange bold px-2 font-18">Contact Us:</h5>
                 <nav class="nav flex-row flex-lg-column">
-                    <a class="nav-link d-flex align-items-center gap-2 font-12 px-2" href="#"><img src="wwwroot/images/footer-phone-icon.svg"></img> 044 28363101</a>
-                    <a class="nav-link d-flex align-items-center gap-2 font-12 px-2" href="#"><img src="wwwroot/images/footer-whatsapp-icon.svg"></img> 97907 04282</a>
+                    <a class="nav-link d-flex align-items-center gap-2 font-12 px-2" ><img src="wwwroot/images/footer-phone-icon.svg"></img> 044 28363101</a>
+                    <a class="nav-link d-flex align-items-center gap-2 font-12 px-2" href="https://api.whatsapp.com/send/?phone=919790704282&text&type=phone_number&app_absent=0"><img src="wwwroot/images/footer-whatsapp-icon.svg"></img> 97907 04282</a>
                     <a class="nav-link d-flex align-items-center gap-2 font-12 px-2" href="mailto:domestic@gaitonde.com"><img src="wwwroot/images/footer-mail-icon.svg"></img> domestic@gaitonde.com</a>
                     <a class="nav-link d-flex align-items-center gap-2 font-12 px-2" href="https://gaitonde.com/"><img src="wwwroot/images/footer-web-icon.svg"></img> www.gaitonde.com</a>
                 </nav>
